--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,66 @@
+<div class="container">
 
-<p-tabView>
-  <p-tabPanel header="Header 1">
-     Content 1
-  </p-tabPanel>
-  <p-tabPanel header="Header 2">
-      Content 2
-  </p-tabPanel>
-  <p-tabPanel header="Header 3">
-      Content 3
-  </p-tabPanel>
-</p-tabView>
+    <div class="ui-g">
+
+        <div class="ui-g-12">
+
+        <h1>Lançamentos</h1>
+
+        </div>
+
+        <div class="ui-g-12 ui-fluid">
+            <label>Descrição</label>
+            <input type="text" pInputText/>
+        </div>
+
+        <div class="ui-g-12">
+            <label style="display: block;">Vencimento</label>
+            <input type="text" pInputText style="width: 95px"/>
+
+            <label>até</label>
+            <input type="text" pInputText style="width: 95px"/>
+        </div>
+
+        <div class="ui-g-12">
+            <button 
+                pButton 
+                type="submit" 
+                label="Pesquisar">
+            </button>
+        </div>
+
+    </div>
+
+    <div class="ui-g">
+
+        <div class="ui-g-12">
+            <p-table [value]="lancamentos">
+                
+                <ng-template pTemplate="header">
+                    <tr>
+                        <th>Tipo</th>
+                        <th>Descrição</th>
+                        <th>Data vencimento</th>
+                        <th>Data pagamento</th>
+                        <th>Valor</th>
+                        <th>Pessoa</th>                        
+                    </tr>
+                </ng-template> 
+
+                <ng-template pTemplate="body" let-lancamento>
+                    <tr>
+                        <td>{{lancamento.tipo}}</td>
+                        <td>{{lancamento.descricao}}</td>
+                        <td class="col-data">{{lancamento.dataVencimento}}</td>
+                        <td class="col-data">{{lancamento.dataPagamento}}</td>
+                        <td class="col-valor">{{lancamento.valor}}</td>
+                        <td>{{lancamento.pessoa}}</td>
+                    </tr>
+                </ng-template>
+
+            </p-table>
+        </div>
+
+    </div>
+
+</div>
