--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,28 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    color: #404C51;
+    margin : 0;
+}
+
+label {
+     font-weight: bold;
+}
+
+/* identifica resolução para aplicar .container */
+@media (min-width : 1200px) {
+    .container {
+        width: 1170px;
+        margin: 0 auto;
+    }
+}
+
+.col-valor {
+    width: 120px;
+    text-align: right;
+}
+
+.col-data {
+    width: 120px;
+    text-align: center;
+}
