--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,66 +1,3 @@
-<div class="container">
-
-    <div class="ui-g">
-
-        <div class="ui-g-12">
-
-        <h1>Lançamentos</h1>
-
-        </div>
-
-        <div class="ui-g-12 ui-fluid">
-            <label>Descrição</label>
-            <input type="text" pInputText/>
-        </div>
-
-        <div class="ui-g-12">
-            <label style="display: block;">Vencimento</label>
-            <input type="text" pInputText style="width: 95px"/>
-
-            <label>até</label>
-            <input type="text" pInputText style="width: 95px"/>
-        </div>
-
-        <div class="ui-g-12">
-            <button 
-                pButton 
-                type="submit" 
-                label="Pesquisar">
-            </button>
-        </div>
-
-    </div>
-
-    <div class="ui-g">
-
-        <div class="ui-g-12">
-            <p-dataTable [value]="lancamentos">
-                <p-column field="pessoa" header="Pessoa"></p-column>
-                <p-column field="descricao" header="Descrição"></p-column>
-                <p-column field="dataVencimento" header="Vencimento" styleClass="col-data"></p-column>
-                <p-column field="dataPagamento" header="Pagamento" styleClass="col-data"></p-column>
-                <p-column field="valor" header="Valor" styleClass="col-valor">
-                    <ng-template let-lanc="rowData" pTemplate="body">
-                        <span 
-                            [style.color]="lanc.tipo === 'DESPESA' ? 'red' : 'blue'">
-                                {{lanc.valor}}
-                        </span>
-                    </ng-template>
-                </p-column>
-                <p-column styleClass="col-acoes">
-                    <ng-template pTemplate="body">
-                        <button pButton icon="fa fa-pencil"></button>
-                        <button pButton icon="fa fa-trash"></button>
-                    </ng-template>
-                </p-column>
-            </p-dataTable>
-            
-        </div>
-
-        <div class="ui-g-12">
-            <a pButton label="Novo lançamento"></a>
-        </div>
-
-    </div>
-
-</div>
+<app-navbar></app-navbar>
+<app-pessoas-pesquisa></app-pessoas-pesquisa>
+<app-lancamentos-pesquisa></app-lancamentos-pesquisa>
