--- a/src/app/lancamentos-pesquisa/lancamentos-pesquisa.component.html
+++ b/src/app/lancamentos-pesquisa/lancamentos-pesquisa.component.html
@@ -22,9 +22,9 @@
       </div>
 
       <div class="ui-g-12">
-          <button 
-              pButton 
-              type="submit" 
+          <button
+              pButton
+              type="submit"
               label="Pesquisar">
           </button>
       </div>
@@ -37,24 +37,37 @@
           <p-dataTable [value]="lancamentos" [paginator]="true" [rows]="4" [responsive]="true">
               <p-column field="pessoa" header="Pessoa"></p-column>
               <p-column field="descricao" header="Descrição"></p-column>
-              <p-column field="dataVencimento" header="Vencimento" styleClass="col-data"></p-column>
-              <p-column field="dataPagamento" header="Pagamento" styleClass="col-data"></p-column>
+              <p-column field="dataVencimento" header="Vencimento" styleClass="col-data">
+                <ng-template let-lanc="rowData" pTemplate="body">
+                  <span>
+                    {{lanc.dataVencimento | date:'dd/MM/yyyy'}}
+                    </span>
+                </ng-template>
+              </p-column>
+              <p-column field="dataPagamento" header="Pagamento" styleClass="col-data">
+                <ng-template let-lanc="rowData" pTemplate="body">
+                  <span>
+                    {{lanc.dataPagamento | date:'dd/MM/yyyy'}}
+                  </span>
+                </ng-template>
+              </p-column>
               <p-column field="valor" header="Valor" styleClass="col-valor">
                   <ng-template let-lanc="rowData" pTemplate="body">
-                      <span 
+                      <span
                           [style.color]="lanc.tipo === 'DESPESA' ? 'red' : 'blue'">
-                              {{lanc.valor}}
+                              {{lanc.valor | number:'1.2-2'}}
                       </span>
                   </ng-template>
               </p-column>
               <p-column styleClass="col-acoes">
                   <ng-template pTemplate="body">
                       <button pButton icon="fa fa-pencil" pTooltip="Editar" tooltipPosition="top"></button>
+                      <span [style.color]="'white'">.</span>
                       <button pButton icon="fa fa-trash" pTooltip="Excluir" tooltipPosition="top"></button>
                   </ng-template>
               </p-column>
           </p-dataTable>
-          
+
       </div>
 
       <div class="ui-g-12">
