--- a/src/app/pessoas-pesquisa/pessoas-pesquisa.component.html
+++ b/src/app/pessoas-pesquisa/pessoas-pesquisa.component.html
@@ -1,29 +1,29 @@
 <div class="container">
 
     <div class="ui-g">
-  
-      <div class="ui-g-12">  
+
+      <div class="ui-g-12">
         <h1>Pessoas</h1>
       </div>
-     
+
       <div class="ui-g-12 ui-fluid">
         <label>Nome</label>
         <input type="text" pInputText/>
-      </div>   
-  
+      </div>
+
       <div class="ui-g-12">
-          <button 
-              pButton 
-              type="submit" 
+          <button
+              pButton
+              type="submit"
               label="Pesquisar">
           </button>
       </div>
-  
+
     </div>
-  
-  
+
+
     <div class="ui-g">
-  
+
         <div class="ui-g-12">
             <p-dataTable [value]="pessoas" [paginator]="true" [rows]="5" [responsive]="true">
                 <p-column field="nome" header="Nome"></p-column>
@@ -39,21 +39,21 @@
                         {{pessoa.status ? 'Ativo' : 'Inativo'}}
                     </a>
                   </ng-template>
-                </p-column>                            
+                </p-column>
                 <p-column styleClass="col-acoes">
                     <ng-template pTemplate="body">
                         <button pButton icon="fa fa-pencil" pTooltip="Editar" tooltipPosition="top"></button>
+                        <span [style.color]="'white'">.</span>
                         <button pButton icon="fa fa-trash" pTooltip="Excluir" tooltipPosition="top"></button>
                     </ng-template>
                 </p-column>
-            </p-dataTable>          
+            </p-dataTable>
         </div>
-  
+
         <div class="ui-g-12">
             <a pButton label="Nova Pessoa"></a>
         </div>
-  
+
     </div>
-  
+
   </div>
-  
